# EcoCode

./: Dockerfile  README.md  baseline_results.json  index.html  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tmp_readme.md
env/: environment.py  reward.py
grader/: grader.py
models/: schemas.py
scripts/: baseline.py  test_e2e.py  validate-submission.sh
server/: app.py
tasks/: definitions.py  task_registry.py
utils/: code_analysis.py  runner.py  sandbox.py
